# rathena

./: .Open Ports On Windows Firewall.bat  .Server Update.bat  .clang-format  .clang-tidy  .dockerignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .svnignore  .travis.yml  AUTHORS  BattlegroundExtended1.0.4.patch  CMakeLists-old.txt  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTDE_QUICK_START.md  Changelog-Renewal.txt  Changelog-SVN.txt  Changelog-Trunk.txt  Changelog.txt  DISCORD_BOT_CHANGELOG.md  DOCUMENTATION_CONSISTENCY_ANALYSIS.md  Dockerfile  Donate.txt  ExtendedBG.diff  GLICKO-LICENSE  IMPLEMENTATION_STATUS.md  INSTALL  INTEGRATION_GUIDE.md  INTEGRATION_RESTORATION_STATUS.md  INTERACTIVE_NPC_GUIDE.md  KNOWN_ISSUES.md  LICENCE_JA  MECHANICS_CONCEPT_CONSISTENCY_ANALYSIS.md  (+136 more)
src/: .clang-format  CMakeLists.txt
src/ai/: CMakeLists.txt  ai_module.cpp  ai_module.hpp
src/aiworld/: CMakeLists.txt  README.md  aiworld_callbacks.cpp  aiworld_callbacks.hpp  aiworld_errors.hpp  aiworld_http_bridge.cpp  aiworld_http_client.cpp  aiworld_http_client.hpp  aiworld_ipc.cpp  aiworld_ipc.hpp  aiworld_messages.hpp  aiworld_native_api.cpp  aiworld_native_api.hpp  aiworld_native_commands.cpp  aiworld_native_commands.hpp  aiworld_plugin.cpp  aiworld_plugin.hpp  aiworld_script_commands.cpp  aiworld_server.cpp  aiworld_threadpool.cpp  aiworld_threadpool.hpp  aiworld_types.cpp  aiworld_types.hpp  aiworld_utils.cpp  aiworld_utils.hpp
src/char/: CMakeLists.txt  GNUmakefile  Makefile  Makefile.in  char-server.aps  char-server.rc  char-server.vcxproj  char-server.vcxproj.filters  char.c  char.cpp  char.h  char.hpp  char_clif.c  char_clif.cpp  char_clif.h  char_clif.hpp  char_cnslif.c  char_cnslif.cpp  char_cnslif.hpp  char_logif.c  char_logif.cpp  char_logif.h  char_logif.hpp  char_mapif.c  char_mapif.cpp  char_mapif.h  char_mapif.hpp  int_achievement.c  int_achievement.cpp  int_achievement.h  int_achievement.hpp  int_auction.c  int_auction.cpp  int_auction.h  int_auction.hpp  int_clan.c  int_clan.cpp  int_clan.h  int_clan.hpp  int_elemental.c  (+43 more)
src/char_sql/: CMakeLists.txt  Makefile  Makefile.in  char.c  char.h  int_auction.c  int_auction.h  int_guild.c  int_guild.h  int_homun.c  int_homun.h  int_mail.c  int_mail.h  int_mercenary.c  int_mercenary.h  int_party.c  int_party.h  int_pet.c  int_pet.h  int_quest.c  int_quest.h  int_storage.c  int_storage.h  inter.c  inter.h  itemdb.c  itemdb.h  make.sh  readme.txt  strlib.c  strlib.h
src/common/: .svnignore  CMakeLists.txt  CommonConfig.cmake.in  GNUmakefile  LogToFile.cpp  LogToFile.h  Makefile  Makefile.in  TServerInfoDisplayer.cpp  TServerInfoDisplayer.h  atomic.h  buffer.h  cbasetypes.h  cbasetypes.hpp  cli.c  cli.cpp  cli.h  cli.hpp  clogproc.cpp  clogproc.h  common-minicore.vcxproj  common-minicore.vcxproj.filters  common.vcxproj  common.vcxproj.filters  conf.c  conf.cpp  conf.h  conf.hpp  core.c  core.cpp  core.h  core.hpp  database.cpp  database.hpp  db.c  db.cpp  db.h  db.hpp  des.c  des.cpp  (+125 more)
src/config/: .renewal.hpp.swk  .renewal.hpp.swl  .renewal.hpp.swm  .renewal.hpp.swo  const.h  const.hpp  core.h  core.hpp  packets.h  packets.hpp  renewal.h  renewal.hpp  secure.h  secure.hpp
src/custom/: ai_bridge.cpp  ai_bridge.hpp  atcommand.inc  atcommand_def.inc  battle_config_init.inc  battle_config_struct.inc  defines_post.h  defines_post.hpp  defines_pre.h  defines_pre.hpp  nofx.hpp  script.inc  script_ai_ipc.cpp  script_ai_ipc.hpp  script_def.inc  script_http.cpp  script_http.hpp
src/ladmin/: Makefile  Makefile.in  ladmin.c  ladmin.h  md5calc.c  md5calc.h
src/lib/: zconf_win32.h  zlib_win32.h
src/login/: CMakeLists.txt  GNUmakefile  Makefile  Makefile.in  account.c  account.cpp  account.h  account.hpp  account_sql.c  account_txt.c  accountdb.hpp  accountdbsql.cpp  accountdbsql.hpp  admin.c  ipban.c  ipban.cpp  ipban.h  ipban.hpp  ipban_sql.c  ipban_txt.c  login-server.aps  login-server.rc  login-server.vcxproj  login-server.vcxproj.filters  login.c  login.cpp  login.h  login.hpp  login_sql.c  login_txt.c  loginchrif.c  loginchrif.cpp  loginchrif.hpp  loginclif.c  loginclif.cpp  loginclif.h  loginclif.hpp  logincnslif.c  logincnslif.cpp  logincnslif.hpp  (+10 more)
src/login_sql/: GNUmakefile  Makefile  Makefile.in  char_int.c  char_int.h  login.c  login.h  login_int.c  login_int.h  make.sh  md5calc.c  md5calc.h  readme.txt  strlib.c  strlib.h  timer.h
src/map/: .svnignore  CMakeLists.txt  GNUmakefile  MOB_ML_INTEGRATION.md  Makefile  Makefile.in  Makefile.win32  achievement.c  achievement.cpp  achievement.h  achievement.hpp  ai_dialogue_queue.cpp  ai_dialogue_queue.hpp  ai_dialogue_state.cpp  ai_dialogue_state.hpp  ai_dialogue_worker.cpp  ai_dialogue_worker.hpp  ai_integration.cpp  ai_integration.hpp  asyncquery.cpp  asyncquery.hpp  atcommand.c  atcommand.cpp  atcommand.h  atcommand.hpp  battle.c  battle.cpp  battle.cpp.orig  battle.h  battle.hpp  battle.hpp.orig  battle_skill.cpp  battle_skill.hpp  battle_skill_categories.cpp  battle_skill_categories.hpp  battle_skill_factory.cpp  battle_skill_factory.hpp  battle_skill_factory_simple.cpp  battleground.c  battleground.cpp  (+228 more)
src/mysql/: config-win.h  m_ctype.h  my_alloc.h  my_dbug.h  my_global.h  my_list.h  my_pthread.h  my_sys.h  mysql.h  mysql_com.h  mysql_time.h  mysql_version.h  raid.h  typelib.h
src/p2p-coordinator/: CMakeLists.txt  README.md
src/plugins/: CMakeLists.txt  Makefile  Makefile.in  console.c  console.def  dbghelpplug.c  dbghelpplug.rc  gui.c  gui.def  gui.txt  httpd.c  httpd.h  httpd.txt  pid.c  pid.def  sample.c  sample.def  sig.c  upnp.txt
src/test/: CMakeLists.txt  Makefile.in  basic_test.vcxproj  basic_test.vcxproj.filters  basictest.cpp  network_monitor_test.cpp  setup_test_db.sql.in  (+8 more)
tests/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bk  comprehensive_e2e_test.py  e2e_test.py  fff.h  git_svn_stubs.cpp  mem_stubs.c  mem_stubs.cpp  rathena_unit_tests[1]_include.cmake  test_random.cpp  test_rathena_ai_integration.py  test_sample.cpp  test_stubs.cpp  test_utils.cpp  tests.cpp
(+10857 files in other folders)
